--- a/public/admin/views/sections.jade
+++ b/public/admin/views/sections.jade
@@ -1,11 +1,11 @@
 include head.jade
 
-h1 #{admin}
 
-div#newSection
-    h2 Agregar nueva sección
+//- add new section
+h2 Agregar nueva sección
+div#newSection    
         div
-            form(action="save" method="post" encType="multipart/form-data")
+            form(action="" method="post" encType="multipart/form-data")
                 input(type="hidden" name="section" value="sections-new")
                 label Título
                 input(type="text" name="title")
@@ -17,8 +17,19 @@ div#newSection
                 input(type="file" name="image" accept=".jpg, .jpeg, .png")
                 br
                 input(type="submit" value="Guardar")
-    
+
+
+//- print all sections
+h2 Tus secciones actuales
 div#contentSections
+    div.inner
+        each section, i in sections
+            div(class="section id_" + section.id)
+                img(src="../admin/files/" + section.image data-name=section.image)
+                h3 #{section.title}
+                p.description #{section.description}
+                div.actions
+                    a(class="remove" data-target=section.id) del
     
 
 include sidebar.jade
