Sections editables finished

--- a/public/admin/views/footer.jade
+++ b/public/admin/views/footer.jade
@@ -1,2 +1,3 @@
 script(src="/libs/jquery-3.2.1.min.js" charset="utf-8")
 script(src="/admin/js/ajax.js" charset="utf-8")
+script(src="/admin/js/script.js" charset="utf-8")
