--- a/public/admin/views/head.jade
+++ b/public/admin/views/head.jade
@@ -7,4 +7,5 @@ html
     meta(name="keywords" content="#{config.keywords} - Admin")
     meta(name="author" content="#{author} - Admin")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    link(rel="stylesheet" href="css/master.css")
   body
