perfil finished update section

--- a/public/admin/views/contact.jade
+++ b/public/admin/views/contact.jade
@@ -13,7 +13,7 @@ div#contactSection
                 input(type="text" name="phone" placeholder="#{contact_data[0].phone}")
                 br
                 label Mail
-                input(type="text" name="mail" placeholder="#{contact_data[0].mail}")
+                input(type="text" data-validation="email" name="mail" placeholder="#{contact_data[0].mail}")
                 br
                 input(type="submit" value="Guardar")
 
