--- a/public/admin/views/sidebar.jade
+++ b/public/admin/views/sidebar.jade
@@ -2,7 +2,7 @@ div#sidebar
     div.wrapper
         ul
             li
-                a(href="/admin/") Home
+                a(href="/admin/home") Home
             li
                 a(href="/admin/sections") Secciones
             li
