--- a/public/admin/views/contact.jade
+++ b/public/admin/views/contact.jade
@@ -4,7 +4,7 @@ include head.jade
 h2 Contacto
 div#contactSection    
         div
-            form(action="" method="post" encType="multipart/form-data")
+            form(action="/admin/contact" method="post" encType="multipart/form-data")
                 input(type="hidden" name="section" value="contact")
                 label Nombre
                 input(type="text" name="name" placeholder="#{contact_data[0].name}")
