--- a/public/admin/views/login.jade
+++ b/public/admin/views/login.jade
@@ -2,9 +2,12 @@ include head.jade
 
 h2 Login
 
+if message != undefined
+    p #{message}
+
 div#loginSection    
         div
-            form(action="" method="post" encType="multipart/form-data")
+            form(action="/admin/login" method="post" encType="multipart/form-data")
                 input(type="hidden" name="section" value="login")
                 label Usuario
                 input(type="text" name="user")
