--- a/public/admin/views/perfil.jade
+++ b/public/admin/views/perfil.jade
@@ -4,7 +4,7 @@ include head.jade
 h2 Perfil
 div#perfilSection    
         div
-            form(action="" method="post" encType="multipart/form-data")
+            form(action="/admin/perfil" method="post" encType="multipart/form-data")
                 input(type="hidden" name="section" value="perfil")
                 label Nueva Contraseña
                 input(type="password" name="pass_confirmation" data-validation="length" data-validation-length="min8")
