--- a/public/admin/views/sections.jade
+++ b/public/admin/views/sections.jade
@@ -5,7 +5,7 @@ include head.jade
 h2 Agregar nueva sección
 div#newSection    
         div
-            form(action="" method="post" encType="multipart/form-data")
+            form(action="/admin/sections" method="post" encType="multipart/form-data")
                 input(type="hidden" name="section" value="sections-new")
                 label Título
                 input(type="text" name="title")
@@ -33,7 +33,7 @@ div#contentSections
                         a(class="remove" data-target=section.id) del - 
                         a(class="edit" data-target=section.id) edit
                 div.editing_content
-                    form(action="" method="post" encType="multipart/form-data")
+                    form(action="/admin/sections" method="post" encType="multipart/form-data")
                         input(type="hidden" name="section" value="sections-edit")
                         input(type="hidden" name="id" value="#{section.id}")
                         input(type="hidden" name="old_image" value="#{section.image}")
