--- a/public/admin/views/sidebar.jade
+++ b/public/admin/views/sidebar.jade
@@ -2,12 +2,22 @@ div#sidebar
     div.wrapper
         ul
             li
-                a(href="/admin/home") Home
+                a(href="/admin/home")
+                    i.material-icons home
+                    | Home
             li
-                a(href="/admin/sections") Secciones
+                a(href="/admin/sections")
+                    i.material-icons extension
+                    | Secciones
             li
-                a(href="/admin/contact") Contacto
+                a(href="/admin/contact")
+                    i.material-icons perm_phone_msg
+                    | Contacto
             li
-                a(href="/admin/perfil") Perfil
+                a(href="/admin/perfil")
+                    i.material-icons face
+                    | Perfil
             li
-                a(href="/admin/logout") Salir
+                a(href="/admin/logout")
+                    i.material-icons exit_to_app
+                    | Salir
