--- a/public/admin/scss/_sidebar.scss
+++ b/public/admin/scss/_sidebar.scss
@@ -1,6 +1,35 @@
 #sidebar{
-    position: relative;
-    width: 100%;
-    height: 75px;
-    background: red;
+    position: fixed;
+    width: 300px;
+    background: #4D616C;
+    height: calc(100% - 70px);
+    top: 70px;
+    left: 0;
+    .wrapper{
+        ul{
+            li{
+                a{
+                    color: #fff;
+                    padding: 14px 25px;
+                    background: transparent;
+                    display: block;
+                    font-size: 17px;
+                    line-height: 46px;
+                    i{
+                        position: relative;
+                        font-size: 30px;
+                        margin-right: 25px;
+                        top: 8px;
+                    }
+                    &.active{
+
+                    }
+                    &:hover{
+                        text-decoration: none;
+                        background: #4A5861;
+                    }
+                }
+            }
+        }
+    }
 }
