--- a/public/admin/views/home.jade
+++ b/public/admin/views/home.jade
@@ -1,17 +1,19 @@
 include head.jade
 include sidebar.jade
+include header.jade
 
-form(action="/admin/home" method="post")
-    input(type="hidden" name="section" value="config")
-    label Título
-    input(type="text" name="title")
-    br
-    label Descripción
-    input(type="text" name="description")
-    br
-    label Keywords
-    input(type="text" name="keywords")
-    br
-    input(type="submit" value="Guardar")
+div#main_content
+    form(action="/admin/home" method="post")
+        input(type="hidden" name="section" value="config")
+        label Título
+        input(type="text" name="title")
+        br
+        label Descripción
+        input(type="text" name="description")
+        br
+        label Keywords
+        input(type="text" name="keywords")
+        br
+        input(type="submit" value="Guardar")
 
 include footer.jade
