--- a/public/admin/css/master.css
+++ b/public/admin/css/master.css
@@ -166,5 +166,38 @@ body {
   left: 300px;
   overflow-y: auto;
   padding: 30px; }
+  #main_content .description {
+    padding: 25px 0;
+    border-bottom: solid 1px #ccc;
+    margin-bottom: 25px; }
+  #main_content ul {
+    padding-left: 20px; }
+    #main_content ul li {
+      margin-bottom: 15px; }
+      #main_content ul li span {
+        font-weight: bold; }
+  #main_content input[type="text"] {
+    width: 100%;
+    height: 35px;
+    border: solid 1px #ccc;
+    background: #f5f5f5;
+    color: #555;
+    padding: 0 10px; }
+  #main_content input[type="submit"].confirm {
+    display: table;
+    height: 35px;
+    border: none;
+    background: #8ab140;
+    color: #fff;
+    padding: 0 15px;
+    text-align: center;
+    float: right;
+    margin: 15px 0 0 0;
+    transition: all 0.5s ease; }
+    #main_content input[type="submit"].confirm:hover {
+      box-shadow: 2px 2px 0px #71942f;
+      color: #e5f5c9; }
+    #main_content input[type="submit"].confirm:focus {
+      outline: initial; }
 
 /*# sourceMappingURL=master.css.map */
