--- a/public/admin/scss/_common.scss
+++ b/public/admin/scss/_common.scss
@@ -8,4 +8,45 @@ body{
     left: 300px;
     overflow-y: auto;
     padding: 30px;
+    .description{
+        padding: 25px 0;
+        border-bottom: solid 1px #ccc;
+        margin-bottom: 25px;
+    }
+    ul{
+        padding-left: 20px;
+        li{
+            margin-bottom: 15px;
+            span{
+                font-weight: bold;
+            }
+        }
+    }
+    input[type="text"]{
+        width: 100%;
+        height: 35px;
+        border: solid 1px #ccc;
+        background: #f5f5f5;
+        color: #555;
+        padding: 0 10px;
+    }
+    input[type="submit"].confirm{
+        display: table;
+        height: 35px;
+        border: none;
+        background: #8ab140;
+        color: #fff;
+        padding: 0 15px;
+        text-align: center;
+        float: right;
+        margin: 15px 0 0 0;
+        transition: all 0.5s ease;
+        &:hover{
+            box-shadow: 2px 2px 0px #71942f;
+            color: #e5f5c9;
+        }
+        &:focus{
+            outline: initial;
+        }
+    }
 }
