--- a/public/admin/views/head.jade
+++ b/public/admin/views/head.jade
@@ -7,6 +7,7 @@ html
     meta(name="keywords" content="#{config.keywords} - Admin")
     meta(name="author" content="#{author} - Admin")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    link(href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
     link(rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css")
     link(rel="stylesheet" href="/admin/css/master.css")
