--- a/public/admin/css/master.css
+++ b/public/admin/css/master.css
@@ -2,13 +2,67 @@
   padding: 0;
   margin: 0; }
 
+body {
+  background: #ECF1F5;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400; }
+
+#main_content {
+  width: calc(100% - 300px);
+  position: absolute;
+  top: 70px;
+  left: 300px;
+  overflow-y: auto;
+  padding: 30px; }
+  #main_content .description {
+    padding: 25px;
+    border: solid 1px #ccc;
+    margin-bottom: 25px;
+    font-size: 15px;
+    background: #ececec; }
+  #main_content ul {
+    padding-left: 20px; }
+    #main_content ul li {
+      margin-bottom: 15px; }
+      #main_content ul li span {
+        font-weight: bold; }
+  #main_content input[type="text"] {
+    width: 100%;
+    height: 35px;
+    border: solid 1px #ccc;
+    background: #f5f5f5;
+    color: #555;
+    padding: 0 10px; }
+  #main_content input[type="submit"].confirm {
+    display: table;
+    height: 35px;
+    border: none;
+    background: #8ab140;
+    color: #fff;
+    padding: 0 15px;
+    text-align: center;
+    float: right;
+    margin: 15px 0 0 0;
+    transition: all 0.5s ease;
+    line-height: 35px;
+    cursor: pointer; }
+    #main_content input[type="submit"].confirm:hover {
+      box-shadow: 2px 2px 0px #71942f;
+      text-decoration: none; }
+    #main_content input[type="submit"].confirm:focus {
+      outline: initial; }
+
+.clear {
+  clear: both; }
+
 #header {
   position: fixed;
   width: 100%;
   background: #4D616C;
   height: 70px;
   top: 0;
-  left: 0; }
+  left: 0;
+  z-index: 5; }
 
 #sidebar {
   position: fixed;
@@ -153,51 +207,60 @@ body, html {
   #login_contain .forgot-password:focus {
     color: #0c6121; }
 
-#contentSections .section .editing_content {
+#contentSections .section {
+  padding: 10px; }
+  #contentSections .section .view_content {
+    padding: 15px;
+    background: #fff; }
+    #contentSections .section .view_content .image {
+      background-size: cover;
+      background-position: center;
+      width: 100%;
+      height: 150px; }
+    #contentSections .section .view_content h3 {
+      margin: 5px 0;
+      font-size: 20px; }
+    #contentSections .section .view_content .actions {
+      padding-top: 15px; }
+      #contentSections .section .view_content .actions .edit {
+        display: table;
+        height: 35px;
+        border: none;
+        background: #d8b346;
+        color: #fff;
+        padding: 0 15px;
+        text-align: center;
+        float: right;
+        margin: 15px 0 0 0;
+        transition: all 0.5s ease;
+        text-decoration: none;
+        line-height: 35px;
+        cursor: pointer; }
+        #contentSections .section .view_content .actions .edit:hover {
+          box-shadow: 2px 2px 0px #a98723;
+          text-decoration: none; }
+        #contentSections .section .view_content .actions .edit:focus {
+          outline: initial; }
+      #contentSections .section .view_content .actions .remove {
+        display: table;
+        height: 35px;
+        border: none;
+        background: #b14059;
+        color: #fff;
+        padding: 0 15px;
+        text-align: center;
+        float: right;
+        margin: 15px 0 0 0;
+        transition: all 0.5s ease;
+        text-decoration: none;
+        line-height: 35px;
+        cursor: pointer; }
+        #contentSections .section .view_content .actions .remove:hover {
+          box-shadow: 2px 2px 0px #88283d;
+          text-decoration: none; }
+        #contentSections .section .view_content .actions .remove:focus {
+          outline: initial; }
+#contentSections .editing_content {
   display: none; }
-
-body {
-  background: #ECF1F5; }
-
-#main_content {
-  width: calc(100% - 300px);
-  position: absolute;
-  top: 70px;
-  left: 300px;
-  overflow-y: auto;
-  padding: 30px; }
-  #main_content .description {
-    padding: 25px 0;
-    border-bottom: solid 1px #ccc;
-    margin-bottom: 25px; }
-  #main_content ul {
-    padding-left: 20px; }
-    #main_content ul li {
-      margin-bottom: 15px; }
-      #main_content ul li span {
-        font-weight: bold; }
-  #main_content input[type="text"] {
-    width: 100%;
-    height: 35px;
-    border: solid 1px #ccc;
-    background: #f5f5f5;
-    color: #555;
-    padding: 0 10px; }
-  #main_content input[type="submit"].confirm {
-    display: table;
-    height: 35px;
-    border: none;
-    background: #8ab140;
-    color: #fff;
-    padding: 0 15px;
-    text-align: center;
-    float: right;
-    margin: 15px 0 0 0;
-    transition: all 0.5s ease; }
-    #main_content input[type="submit"].confirm:hover {
-      box-shadow: 2px 2px 0px #71942f;
-      color: #e5f5c9; }
-    #main_content input[type="submit"].confirm:focus {
-      outline: initial; }
 
 /*# sourceMappingURL=master.css.map */
