--- a/public/admin/scss/_common.scss
+++ b/public/admin/scss/_common.scss
@@ -1,5 +1,80 @@
+@mixin btnSuccess {
+    display: table;
+    height: 35px;
+    border: none;
+    background: #8ab140;
+    color: #fff;
+    padding: 0 15px;
+    text-align: center;
+    float: right;
+    margin: 15px 0 0 0;
+    transition: all 0.5s ease;
+    line-height: 35px;
+    cursor: pointer;
+    &:hover{
+        box-shadow: 2px 2px 0px #71942f;
+        text-decoration: none;
+    }
+    &:focus{
+        outline: initial;
+    }
+}
+
+@mixin btnDanger {
+    display: table;
+    height: 35px;
+    border: none;
+    background: #b14059;
+    color: #fff;
+    padding: 0 15px;
+    text-align: center;
+    float: right;
+    margin: 15px 0 0 0;
+    transition: all 0.5s ease;
+    text-decoration: none;
+    line-height: 35px;
+    cursor: pointer;
+    &:hover{
+        box-shadow: 2px 2px 0px #88283d;
+        text-decoration: none;
+    }
+    &:focus{
+        outline: initial;
+    }
+}
+@mixin btnAlert {
+    display: table;
+    height: 35px;
+    border: none;
+    background: #d8b346;
+    color: #fff;
+    padding: 0 15px;
+    text-align: center;
+    float: right;
+    margin: 15px 0 0 0;
+    transition: all 0.5s ease;
+    text-decoration: none;
+    line-height: 35px;
+    cursor: pointer;
+    &:hover{
+        box-shadow: 2px 2px 0px #a98723;
+        text-decoration: none;
+    }
+    &:focus{
+        outline: initial;
+    }
+}
+
+$light : 300;
+$regular : 400;
+$semi-bold : 600;
+$bold : 700;
+
+
 body{
     background: #ECF1F5;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: $regular;
 }
 #main_content{
     width: calc(100% - 300px);
@@ -9,9 +84,11 @@ body{
     overflow-y: auto;
     padding: 30px;
     .description{
-        padding: 25px 0;
-        border-bottom: solid 1px #ccc;
+        padding: 25px;
+        border: solid 1px #ccc;
         margin-bottom: 25px;
+        font-size: 15px;
+        background: #ececec;
     }
     ul{
         padding-left: 20px;
@@ -31,22 +108,9 @@ body{
         padding: 0 10px;
     }
     input[type="submit"].confirm{
-        display: table;
-        height: 35px;
-        border: none;
-        background: #8ab140;
-        color: #fff;
-        padding: 0 15px;
-        text-align: center;
-        float: right;
-        margin: 15px 0 0 0;
-        transition: all 0.5s ease;
-        &:hover{
-            box-shadow: 2px 2px 0px #71942f;
-            color: #e5f5c9;
-        }
-        &:focus{
-            outline: initial;
-        }
+        @include btnSuccess;
     }
+}
+.clear{
+    clear: both;
 }
