--- a/public/admin/views/footer.jade
+++ b/public/admin/views/footer.jade
@@ -1,6 +1,6 @@
 script(src="/libs/jquery-3.2.1.min.js" charset="utf-8")
 script(src="/libs/jquery.form-validator.min.js" charset="utf-8")
 script(src="/libs/bootstrap/js/bootstrap.min.js" charset="utf-8")
-script(src="https://cdn.ckeditor.com/ckeditor5/1.0.0-alpha.2/classic/ckeditor.js" charset="utf-8")
+script(src="/libs/ckeditor/ckeditor.js" charset="utf-8")
 script(src="/admin/js/ajax.js" charset="utf-8")
 script(src="/admin/js/script.js" charset="utf-8")
