--- a/public/admin/css/master.css
+++ b/public/admin/css/master.css
@@ -13,7 +13,7 @@ body {
   top: 70px;
   left: 300px;
   overflow-y: auto;
-  padding: 30px; }
+  padding: 0 30px 30px 30px; }
   #main_content .description {
     padding: 25px;
     border: solid 1px #ccc;
@@ -26,7 +26,7 @@ body {
       margin-bottom: 15px; }
       #main_content ul li span {
         font-weight: bold; }
-  #main_content input[type="text"] {
+  #main_content input[type="text"], #main_content input[type="password"] {
     width: 100%;
     height: 35px;
     border: solid 1px #ccc;
@@ -54,6 +54,12 @@ body {
 
 .clear {
   clear: both; }
+
+.msj.success {
+  color: #8ab140; }
+
+.msj.error {
+  color: #b14059; }
 
 #header {
   position: fixed;
@@ -83,6 +89,10 @@ body {
       font-size: 30px;
       margin-right: 25px;
       top: 8px; }
+    #sidebar .wrapper ul li a.active {
+      background: #4A5861; }
+    #sidebar .wrapper ul li a:focus {
+      text-decoration: none; }
     #sidebar .wrapper ul li a:hover {
       text-decoration: none;
       background: #4A5861; }
