--- a/public/client/views/footer.jade
+++ b/public/client/views/footer.jade
@@ -1,2 +1,3 @@
-footer
-    p Footer
+script(src="/libs/jquery-3.2.1.min.js" charset="utf-8")
+script(src="/libs/bootstrap/js/bootstrap.min.js" charset="utf-8")
+script(src="/client/js/script.js" charset="utf-8")
