--- a/public/client/views/head.jade
+++ b/public/client/views/head.jade
@@ -1,10 +1,12 @@
 doctype html
 html
   head
-    title #{config.title}
+    title
     meta(charset="UTF-8")
-    meta(name="description" content="#{config.description}")
-    meta(name="keywords" content="#{config.keywords}")
-    meta(name="author" content="#{author}")
+    meta(name="description" content="")
+    meta(name="keywords" content="")
+    meta(name="author" content="")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
   body
+
+- console.log(config);
