--- a/public/admin/views/header.jade
+++ b/public/admin/views/header.jade
@@ -1,2 +1,4 @@
 div#header
-    p Icono
+    p.welcome Bienvenido #{admin_name}
+    a(href="/").logotipo
+        img(src="/client/images/logotipo_w.png")
