--- a/public/client/views/head.jade
+++ b/public/client/views/head.jade
@@ -7,6 +7,5 @@ html
     meta(name="keywords" content="")
     meta(name="author" content="")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    link(rel="stylesheet" href="/client/master.css") 
   body
-
-- console.log(config);
