--- a/public/client/views/home.jade
+++ b/public/client/views/home.jade
@@ -1,6 +1,14 @@
 include head.jade
 
-div#sections
+div#section1
+    div.image
+    h3
+    p
+
+div#section2
+    div.image
+    h3
+    p
     
 div#contact
 
